--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
@@ -44,21 +44,10 @@
                             </h5>
                             <div id="info" class="collapse footer-collapse">
                                 <ul class="list-unstyled">
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="delivery-information.html">Delivery Information</a></li>
-                                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                                    <li><a href="terms.html">Terms &amp; Conditions</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
-                                    <li><a href="brands.html">BRANDS</a></li>
-                                    <li class="li-mhp-menu">
-                                        <a href="#">MHP</a>
-                                        <ul class="mhp-menu">
-                                            <li><a href="block-animation.html">Block Animation</a></li>
-                                            <li><a href="gallery-mhp.html">Gallery</a></li>
-                                            <li><a href="thumb.html">Thumb</a></li>
-                                            <li><a href="links.html">Links</a></li>
-                                        </ul>
-                                    </li>
+                                    <li><a href="about-us">About Us</a></li>
+                                    <li><a href="privacy-policy">Privacy Policy</a></li>
+                                    <li><a href="privacy-policy">Terms &amp; Conditions</a></li>
+                                    <li><a href="get-started">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -69,9 +58,9 @@
                             </h5>
                             <div id="account" class="collapse footer-collapse">
                                 <ul class="list-unstyled lastb">
-                                    <li><a href="my-account.html">My Account</a></li>
-                                    <li><a href="order.html">Order History</a></li>
-                                    <li><a href="wish-list.html">Wish List</a></li>
+                                    <li><a href="@Url.Action("Index","Home")">My Account</a></li>
+                                    <li><a href="#">Order History</a></li>
+                                    <li><a href="#">Wish List</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -85,9 +74,9 @@
                         </h5>
                         <div id="contact" class="collapse footer-collapse footcontact ">
                             <ul class="list-unstyled f-left">
-                                <li><img src="/Areas/Shop/Content/app/img/icons/location.png" alt=""><a href="https://goo.gl/maps/iXCZicifeHYpBN7LA"<span>Airedale House, Clayton Wood Rise<br>Leeds LS16 6RF</span></a></li>
-                                <li><img src="/Areas/Shop/Content/app/img/icons/email.png" alt=""><span>contact@example.com</span></li>
-                                <li><img src="/Areas/Shop/Content/app/img/icons/phone.png" alt=""><span>+44 333-32 30 202</span></li>
+                                <li><a href="https://goo.gl/maps/iXCZicifeHYpBN7LA"><img class="mt-7" src="/Areas/Shop/Content/app/img/icons/location.png" alt=""><span>Airedale House, Clayton Wood Rise Leeds LS16 6RF, UK</span></a></li>
+                                <li><img src="/Areas/Shop/Content/app/img/icons/email.png" alt=""><span>info@ganedata.co.uk</span></li>
+                                <li><img src="/Areas/Shop/Content/app/img/icons/phone.png" alt=""><span>+44 (0) 333 323 0202</span></li>
                             </ul>
                             <br />
                             <h5 class="text-capitalize">Payment</h5>
