--- a/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
@@ -8,7 +8,7 @@
                         <ul class="top-right">
                             <li class="phone-1">
                                 <i class="fa fa-phone"></i>
-                                <span>0333-32 30 202</span>
+                                <span>+44 (0) 333 323 0202</span>
                             </li>
                             <li>
                                 <i class="fa fa-user"></i>
@@ -92,7 +92,7 @@
                         <ul class="phone-2">
                             <li>
                                 <i class="fa fa-phone"></i>
-                                <span>0333-32 30 202</span>
+                                <span>+44 (0) 333 323 0202</span>
                             </li>
                         </ul>
                             <span class="book-demo-2"><a href="get-started">Book A Demo</a></span>
