--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
@@ -76,7 +76,7 @@
                         <div class="product-layout toppro second-row">
                             <div class="product-thumb1 transition">
                                 <div class="">
-                                    <div class="col-xs-12 topprom ">
+                                    <div class="col-xs-12 manage-width topprom ">
                                         <div class="image">
                                             <a href="@Url.Action("ProductDetails","Products", new { productId= product[i+1].ProductId })"><img src="@(!string.IsNullOrEmpty(product[i].DefaultImage)?ViewBag.BaseFilePath +product[i].DefaultImage :ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@product[i+1].Name" title="@product[i+1].Name" class="img-responsive center-block first-img" /></a>
                                             <!-- Smartshop Images Start -->
