--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -38,7 +38,7 @@
                                 <svg width="20px" height="19px">
                                     <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#call"></use>
                                 </svg>
-                                +1 123 456 7890
+                                +44 (0) 333 323 0202
                             </span>
                         </a>
                     </div>
@@ -75,19 +75,21 @@
                                     <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#user"></use>
                                 </svg>
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-right user_account">
+                            <ul class="dropdown-menu dropdown-menu-right user_account user-fa-icons">
                                 @if (@ViewBag.LoginDetail == "Login")
                                 {
                                     <li><a href="@Url.Action("Create","User")"><i class="fa fa-user-plus"></i>Register</a></li>
                                 }
                                 else
                                 {
-                                    <li><a href="@Url.Action("Index","Home")"><i class="fa fa-user" style="margin: 0 7px !important;"></i>@ViewBag.UserName</a></li>
+                                    <li><a href="@Url.Action("Index","Home")"><i class="fa fa-user"></i>@ViewBag.UserName</a></li>
+                                    <li><a href="#"><i class="fa fa-cart-arrow-down"></i>Order History</a></li>
+                                    <li><a href="#"><i class="fa fa-heart"></i>Wish List</a></li>
                                 }
 
                                 @if (@ViewBag.LoginDetail == "Login")
                                 {
-                                    <li><a href="@Url.Action("login", "User")"><i class="fa fa-sign-in" style="margin: 0 6.5px !important;"></i>Login</a></li>
+                                    <li><a href="@Url.Action("login", "User")"><i class="fa fa-sign-in"></i>Login</a></li>
                                 }
                                 else
                                 {
