--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductBannerPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductBannerPartial.cshtml
@@ -1,13 +1,13 @@
 ﻿<div class="topbanner">
     <div class="row">
-        <div class="imgbanner col-xs-12 col-md-3 col-sm-4">
+        <div class="imgbanner side-banner col-xs-12 col-md-3 col-sm-2">
             <div class=" beffect">
                 <a href="#">
                     <img src="/Areas/Shop/Content/app/img/home/Banner_1.png" alt="banner" class="img-responsive" />
                 </a>
             </div>
         </div>
-        <div class="cbanner col-xs-12 col-md-6 col-sm-8">
+        <div class="cbanner col-xs-12 col-md-6 col-sm-12">
             <div class="beffect">
                 <a href="#">
                     <img src="/Areas/Shop/Content/app/img/home/Banner_2.png" alt="banner" class="img-responsive center-block" />
@@ -19,7 +19,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-xs-3 hidden-sm hidden-xs">
+        <div class="col-xs-3 col-md-3 col-sm-2 side-banner hidden-sm hidden-xs">
             <div class="sellbanner beffect">
                 <a href="#">
                     <img src="/Areas/Shop/Content/app/img/home/Banner_4.png" alt="banner" class="img-responsive center-block" />
