--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
@@ -4,11 +4,26 @@
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "ProductCategories";
+    IEnumerable<ProductManufacturer> data = null;
+    if (ViewBag.Manufacturer != null)
+    {
+        data = ViewBag.Manufacturer as IEnumerable<ProductManufacturer>;
+    }
+    var UrlQuery = Request.Url.Query;
+    string values = "";
+    if (UrlQuery.Contains("values="))
+    {
+        var startindex = UrlQuery.IndexOf("values=");
+        var lastindex = UrlQuery.Length - startindex;
+        values = UrlQuery.Substring(startindex, lastindex).Replace("values=", "");
+    }
 }
+
 
 
 <div id="product-search" class="container custom-max-width">
     <div class="row">
+        @Html.Hidden("valuesParameter", (string)values)
         <div class="col-md-3 col-sm-12">
             <div class="filters cat-filter">
                 <h2>Refined by</h2>
@@ -33,7 +48,8 @@
                             <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <ul class="">
-                                        <li class="list-group-item"><a href="#">No (16)</a></li>
+                                        <li class="list-group-item"><input type="checkbox" id="stockS" class="checkbox-inline" value="In_stock" @(Request.Url.Query.ToLower().Contains("in_stock") ? "checked" : "")>In stock </li>
+                                        <li class="list-group-item"><input type="checkbox" id="stockS" class="checkbox-inline" value="Out_stock" @(Request.Url.Query.ToLower().Contains("out_stock") ? "checked" : "")>Out of stock</li>
                                     </ul>
                                 </div>
                             </div>
@@ -49,7 +65,9 @@
                             <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">
                                     <ul class="">
-                                        <li class="list-group-item"><input><a href="#">  0 - £100.00 (16)</a></li>
+                                        <li class="list-group-item"><input type="checkbox" id="priceS" class="checkbox-inline" value="5_25" @(Request.Url.Query.ToLower().Contains("5_25") ? "checked" : "")> £5 - £25.00</li>
+                                        <li class="list-group-item"><input type="checkbox" id="priceS" class="checkbox-inline" value="25_50" @(Request.Url.Query.ToLower().Contains("25_50") ? "checked" : "")> £25.00 - £50.00</li>
+                                        <li class="list-group-item"><input type="checkbox" id="priceS" class="checkbox-inline" value="50_100" @(Request.Url.Query.ToLower().Contains("50_100") ? "checked" : "")> £50.00 - £100.00</li>
                                     </ul>
                                 </div>
                             </div>
@@ -58,20 +76,28 @@
                             <div class="panel-heading" role="tab" id="headingThree">
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-                                        Manufacturer
+                                        Brand
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseThree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
-                                    <ul class=" manufacturer-ul">
-                                        <li class="list-group-item" title="Cipherlab (1)"><input><a href="#">Cipherlab (1)</a></li>
-                                        <li class="list-group-item" title="Omnikey (2) rfgswaegwer sfdgbsdfbsdfbsdf"><input><a href="#">Omnikey (2) rfgswaegwer sfdgbsdfbsdfbsdf</a></li>
-                                        <li class="list-group-item" title="Payleven (1) fedswagrgv"><input><a href="#">Payleven (1) fedswagrgv</a></li>
-                                        <li class="list-group-item" title="PayPal Here (1) urhfpui oasidu"><input><a href="#">PayPal Here (1) urhfpui oasidu</a></li>
-                                        <li class="list-group-item" title="Unitech (1) ksjudf oresduhbo"><input><a href="#">Unitech (1) ksjudf oresduhbo</a></li>
-                                        <li class="list-group-item" title="Wasp Barcode (1) verfgwheripuh jklb"><input><a href="#">Wasp Barcode (1) verfgwheripuh jklb</a></li>
-                                        <li class="list-group-item" title=""><input><a href="#">WorldPay (1)</a></li>
+                                    <ul class="">
+                                        @if (data != null)
+                                        {
+                                            foreach (var item in data)
+                                            {
+                                                string name = item.Name.Replace(" ", "_");
+                                                <li class="list-group-item"><input type="checkbox" id="BrandS" class="checkbox-inline" value="@(item.Name.Replace(" ", "_"))" @(Request.Url.Query.ToLower().Contains(name.ToLower()) ? "checked" : "")>@(item?.Name)</li>
+                                            }
+                                        }
+
+
+
+
+
+
+
                                     </ul>
                                 </div>
                             </div>
@@ -101,11 +127,6 @@
                         </button>
                     </div>
                 </div>
-                @*<div class="col-lg-4 col-md-5 col-sm-6 col-xs-7 hidden-md hidden-sm ct">
-                        <a href="#" id="compare-total" class="btn btn-link">Product Compare (0)</a>
-                    </div>*@
-
-
                 <input type="text" id="currentsortedvalue" value="@(ViewBag.CurrentSort ?? "")" style="display:none" />
                 <input type="text" id="currentFiltervalue" value="@(ViewBag.CurrentFilter ?? "")" style="display:none" />
                 <input type="text" id="searchString" value="@(ViewBag.searchString ?? "")" style="display:none" />
@@ -123,14 +144,6 @@
                         <label class="input-group-addon" for="input-limit">Show:</label>
                         @Html.DropDownList("input-limit", ViewBag.pageList as SelectList, htmlAttributes: new { @class = "form-control", onchange = "searchPoducts();" })
 
-
-                        @*<select id="input-limit" class="form-control" onchange="PageSizeChanges(event);">
-                                <option value="10">10</option>
-                                <option value="15">15</option>
-                                <option value="20">20</option>
-                                <option value="25">25</option>
-                                <option value="50">50</option>
-                            </select>*@
                     </div>
                 </div>
 
@@ -175,7 +188,7 @@
                                     <p class="pricedis price text-right">@*<span class="price-new">@ViewBag.CurrencySymbol@item.MinThresholdPrice</span>*@ <span class="price-old">@ViewBag.CurrencySymbol @item.SellPrice</span></p>
                                     <div class="clearfix"></div>
                                     <div class="button-group">
-                                         
+
                                         <a href="javascript:;" type="button" class="acart" onclick="AddToCart(@item.ProductId)">
                                             <span>Add to Basket</span>
                                         </a>
@@ -192,7 +205,7 @@
             <div class="row pagi">
                 <div class="col-sm-6 col-xs-6 text-left pagination">
 
-                    @Html.PagedListPager(Model, page => Url.Action("ProductCategories", new { productGroupId = ViewBag.groupId ?? null, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter, page = page, pagesize = Model.PageSize, departmentId = ViewBag.departmentId }))
+                    @Html.PagedListPager(Model, page => Url.Action("ProductCategories", new { productGroup = ViewBag.groupId ?? null, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter, page = page, pagesize = Model.PageSize, department = ViewBag.departmentId, values = values }))
 
 
                 </div>
