--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryProductsPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryProductsPartial.cshtml
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="cat-caption">
-                        <h4><a href="@Url.Action("_GetProductByGroupsAndDepartment","Home", new { productgroupId= item.ProductGroupId })">@item.Name</a></h4>
+                        <h4><a href="@Url.Action("_GetProductByGroupsAndDepartment","Home", new { productgroupId= item.ProductGroup })">@item.Name</a></h4>
                         <div class="rating pull-left">
                             <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                             <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
