--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_DeliveryInfoPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_DeliveryInfoPartial.cshtml
@@ -1,47 +1,47 @@
 ﻿<div>
     <div class="deliveryinfo">
         <div class="">
-            <div class="row deliveryinfo-row">
-                <ul class="col-xs-12 col-sm-6 col-md-3 list-inline">
-                    <li class="del1">
-                        <svg width="36px" height="36px">
+            <div class=" deliveryinfo-row">
+                <ul class="col-md-3 col-sm-3 col-xs-3 list-inline p-0">
+                    <li class="del1 pl-0">
+                        <svg class="ml-0" width="36px" height="36px">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#gift"></use>
                         </svg>
                     </li>
-                    <li class="se1 text-xs-left">
+                    <li class="se1 t-left text-xs-left">
                         <h4>special gift cards</h4>
                         <p>give a perfect gift</p>
                     </li>
                 </ul>
-                <ul class="col-xs-12 col-sm-6 col-md-3 sborder list-inline">
+                <ul class="col-md-3 col-sm-3 col-xs-3 list-inline p-0">
                     <li class="del4">
                         <svg width="36px" height="36px">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#pay"></use>
                         </svg>
                     </li>
-                    <li class="se1  text-xs-left">
+                    <li class="se1 t-left text-xs-left">
                         <h4>secure payment</h4>
                         <p>100% secure payment</p>
                     </li>
                 </ul>
-                <ul class="col-xs-12 col-sm-6 col-md-3 sborder list-inline">
-                    <li class="del2">
+                <ul class=" col-md-3 col-sm-3 col-xs-3 list-inline t-center p-0">
+                    <li class="del2 ">
                         <svg width="36px" height="36px">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#support"></use>
                         </svg>
                     </li>
-                    <li class="se1  text-xs-left">
+                    <li class="se1 t-left text-xs-left">
                         <h4>24/7 support</h4>
                         <p>online support 24/7</p>
                     </li>
                 </ul>
-                <ul class="col-xs-12 col-sm-6 col-md-3 sborder list-inline">
+                <ul class=" col-md-3 col-sm-3 col-xs-3 t-right list-inline p-0">
                     <li class="del3">
                         <svg width="36px" height="36px">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#ship"></use>
                         </svg>
                     </li>
-                    <li class="se1  text-xs-left">
+                    <li class="se1 t-left text-xs-left">
                         <h4>free shipping</h4>
                         <p>on order over $25</p>
                     </li>
