--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -4,7 +4,7 @@
     @*<div class="col-md-3 col-sm-4 stmenu"></div>*@
     <div id="menu1" class="col-md-12 stme2 nav-menue">
 
-        <div class="manun">
+        <div class="manun custom-max-width m-auto">
             <ul class="list-inline">
                 @if (ViewBag.departments != null)
                 {
