--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -5,7 +5,7 @@
 <div id="top-header" class="sticky-header">
     <header class="custom-header-container">
         <div class="container custom-container">
-            <div class="row header-row">
+            <div class="row header-row custom-max-width m-auto">
                 <div class="head-logo">
                     <div id="logo" class="ui-logo">
                         <a href="@Url.Action("Index","Home")">
@@ -16,6 +16,10 @@
                 @*<div class="col-xs-6 iconxs"></div>*@
                 @*<div class=" h-search">
                     <div id="search-by-category" class="search-by-category">*@
+               
+                
+            <div class="head-without-logo">
+
                 <div class="search-container search-by-category">
                     <div class="categories-container">
                         <div class="hover-cate">
@@ -30,7 +34,7 @@
                     </div>
                 </div>
                 @*</div>
-                    </div>*@
+        </div>*@
                 <div class=" contact-currency">
                     <div class="hcontact">
                         <a href="#">
@@ -123,14 +127,14 @@
                                                                 </p>
 
                                                                 @*<ul>
-                                                                        <li>
-                                                                            Sku: <span>@(item.ProductMaster?.SKUCode)</span>
-                                                                        </li>
-                                                                        <li>Size: <span>M</span></li>
-                                                                        <li>
-                                                                            Quantity: <span>@item.Qty</span>
-                                                                        </li>
-                                                                    </ul>*@
+                                                            <li>
+                                                                Sku: <span>@(item.ProductMaster?.SKUCode)</span>
+                                                            </li>
+                                                            <li>Size: <span>M</span></li>
+                                                            <li>
+                                                                Quantity: <span>@item.Qty</span>
+                                                            </li>
+                                                        </ul>*@
                                                             </div>
                                                         </td>
                                                     </tr>
@@ -150,6 +154,10 @@
                         </li>
                     </ul>
                 </div>
+
+            </div>
+
+
             </div>
         </div>
     </header>
