--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_FooterPartialArea.cshtml
@@ -13,7 +13,7 @@
         </div>
         <hr class="footer-hr">
     </div>
-    <div class="container">
+    <div class="container custom-max-width m-auto">
         <div class="row">
             <div class="middle-footer">
                 <aside id="column-left1" class="col-sm-4 col-xs-12 follow-us-footer">
