--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_CartItemsPartial.cshtml
@@ -30,8 +30,8 @@
             <div class="cartitem-price">
                 <p><span>Price:</span><b>@item.CurrencySign@item.Price</b></p>
                 @*@Html.Hidden("cartView", true);*@
-                <p><span>Tax:</span><b>@item.CurrencySign@item.TaxAmount</b></p>
-                <p><span>Total:</span><b>@item.CurrencySign@item.TotalAmount</b></p>
+                @*<p><span>Tax:</span><b>@item.CurrencySign@item.TaxAmount</b></p>
+                <p><span>Total:</span><b>@item.CurrencySign@item.TotalAmount</b></p>*@
             </div>
         </div>
 
