--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_OnSalePartial.cshtml
@@ -59,9 +59,18 @@
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                             </div>
                                             <div class="button-group">
-                                                <button type="button" onclick="AddToCart(@product[i].ProductId)" class="acart">
-                                                    <span>Add to Basket</span>
-                                                </button>
+                                                @if (@product[i].SellPrice > 0 && @product[i].SellPrice.HasValue && @product[i].PercentMargin > 0)
+                                                {
+                                                    <button type="button" class="acart" onclick="AddToCart(@product[i].ProductId)">
+                                                        <span>Add to Basket</span>
+                                                    </button>
+                                                }
+                                                else
+                                                {
+                                                    <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                                        <span>Add to Basket</span>
+                                                    </button>
+                                                }
                                             </div>
                                         </div>
                                     </div>
@@ -112,9 +121,18 @@
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                             </div>
                                             <div class="button-group">
-                                                <button type="button" onclick="AddToCart(@product[i+1].ProductId)" class="acart">
-                                                    <span>Add to Basket</span>
-                                                </button>
+                                                @if (@product[i + 1].SellPrice > 0 && @product[i + 1].SellPrice.HasValue && @product[i + 1].PercentMargin > 0)
+                                                {
+                                                    <button type="button" class="acart" onclick="AddToCart(@product[i + 1].ProductId)">
+                                                        <span>Add to Basket</span>
+                                                    </button>
+                                                }
+                                                else
+                                                {
+                                                    <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                                        <span>Add to Basket</span>
+                                                    </button>
+                                                }
                                             </div>
                                         </div>
                                     </div>
