--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
@@ -51,9 +51,18 @@
                                     </div>
                                     <div class="clearfix"></div>
                                     <div class="button-group">
-                                        <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
-                                            <span>Add to Basket</span>
-                                        </button>
+                                        @if (@Model.productMasterList[i].SellPrice > 0 && @Model.productMasterList[i].SellPrice.HasValue && @Model.productMasterList[i].PercentMargin > 0)
+                                        {
+                                            <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
+                                                <span>Add to Basket</span>
+                                            </button>
+                                        }
+                                        else
+                                        {
+                                            <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                                <span>Add to Basket</span>
+                                            </button>
+                                        }
                                     </div>
                                 </div>
                             </div>
@@ -87,9 +96,18 @@
                                     </div>
                                     <div class="clearfix"></div>
                                     <div class="button-group">
-                                        <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
-                                            <span>Add to Basket</span>
-                                        </button>
+                                        @if (@Model.productMasterList[i].SellPrice > 0 && @Model.productMasterList[i].SellPrice.HasValue && @Model.productMasterList[i].PercentMargin > 0)
+                                        {
+                                            <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
+                                                <span>Add to Basket</span>
+                                            </button>
+                                        }
+                                        else
+                                        {
+                                            <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                                <span>Add to Basket</span>
+                                            </button>
+                                        }
                                     </div>
                                 </div>
                             </div>
@@ -123,9 +141,18 @@
                                     </div>
                                     <div class="clearfix"></div>
                                     <div class="button-group">
-                                        <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
-                                            <span>Add to Basket</span>
-                                        </button>
+                                        @if (@Model.productMasterList[i].SellPrice > 0 && @Model.productMasterList[i].SellPrice.HasValue && @Model.productMasterList[i].PercentMargin > 0)
+                                        {
+                                            <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
+                                                <span>Add to Basket</span>
+                                            </button>
+                                        }
+                                        else
+                                        {
+                                            <button type="button" class="acart" style="color:white; background-color: grey" disabled>
+                                                <span>Add to Basket</span>
+                                            </button>
+                                        }
                                     </div>
                                 </div>
                             </div>
