--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopProductPartial.cshtml
@@ -63,9 +63,19 @@
                                         </div>
                                         <div class="clearfix"></div>
                                         <div class="button-group">
-                                            <button  type="button" class="acart" onclick="AddToCart(@item.ProductId)">
-                                                <span>Add to Basket</span>
-                                            </button>
+                                            @if (@item.SellPrice > 0 && @item.SellPrice.HasValue  && @item.PercentMargin > 0)
+                                            {
+                                                <button type="button" class="acart" onclick="AddToCart(@item.ProductId)">
+                                                    <span>Add to Basket</span>
+                                                </button>
+                                            }
+                                            else
+                                            {
+                                                <button type="button" class="acart" style="color:white; background-color: grey" disabled >
+                                                    <span>Add to Basket</span>
+                                                </button>
+                                            }
+                                           
                                         </div>
                                     </div>
                                 </div>
