Added department in navigation in ECommerce Imported from Changeset 2379

--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductCategories.cshtml
@@ -114,6 +114,7 @@
                 {
                     <ul class="breadcrumb">
                         <li><a href="#">Home</a></li>
+                        <li><a href="#">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "Department Name")</a></li>
                         <li><a href="#">@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "Product Group")</a></li>
                     </ul>
                     break;
