--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
@@ -8,6 +8,7 @@
         <div id="content" class="col-md-12 col-sm-12">
             <ul class="breadcrumb">
                 <li><a href="#">Home</a></li>
+                <li><a href="#">@(!string.IsNullOrEmpty(Model?.TenantDepartment?.DepartmentName) ? Model.TenantDepartment.DepartmentName : "Department name")</a></li>
                 <li><a href="#">@(!string.IsNullOrEmpty(Model?.ProductGroup?.ProductGroup) ? Model.ProductGroup.ProductGroup : "Product Group")</a></li>
                 <li><a href="#">@(!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName) ? Model.ProductCategory.ProductCategoryName : "Product Category")</a></li>
                 <li><a href="#">@Model.Name</a></li>
